+Moved Models in app.js to DatabaseManager +Minor code improvement +Some code refactor +Added GCM push notification service

--- a/Eventfly.properties
+++ b/Eventfly.properties
@@ -13,4 +13,7 @@ config.pass = '';
 // MongoDB uri connection
 config.mongodburi = 'mongodb://localhost/eventfly'
 
+// GCM api server key
+config.gcm_api_key = ''
+
 module.exports = config;
