--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Eventfy",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -17,7 +17,7 @@
     "basic-auth": "1.0.3",
     "request": "2.67.0",
     "method-override": "2.3.5",
-    "revalidator": "^0.3.1"
-
+    "revalidator": "^0.3.1",
+    "node-gcm": "~0.14.3"
   }
 }
