-Minor code fixes +Added user register and user token request endpoint

--- a/server.properties
+++ b/server.properties
@@ -16,4 +16,6 @@ config.mongodburi = 'mongodb://localhost/eventfly'
 // GCM api server key
 config.gcm_api_key = ''
 
+config.jwt = 'thingy'
+
 module.exports = config;
