Added jwt token expiration

--- a/server.properties
+++ b/server.properties
@@ -11,11 +11,11 @@ config.user = '';
 config.pass = '';
 
 // MongoDB uri connection
-config.mongodburi = 'mongodb://localhost/eventfly'
+config.mongodburi = 'mongodb://localhost/eventfly';
 
 // GCM api server key
-config.gcm_api_key = ''
+config.gcm_api_key = '';
 
-config.jwt = 'thingy'
+config.jwt = 'thingy';
 
 module.exports = config;
