+Added image service

--- a/server.properties
+++ b/server.properties
@@ -16,6 +16,10 @@ config.mongodburi = 'mongodb://localhost/eventfly';
 // GCM api server key
 config.gcm_api_key = '';
 
+// Thumbnail height in pixels
+config.thumbnail_height = 150;
+
+// JWT Key
 config.jwt = 'thingy';
 
 module.exports = config;
