--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "revalidator": "^0.3.1",
     "node-gcm": "~0.14.3",
     "bcryptjs": "^2.1.0",
-    "jsonwebtoken": "^5.0.2"
-
+    "jsonwebtoken": "^5.0.2",
+    "lwip": "0.0.8",
+    "formidable": "~1.0.17"
   }
 }
