+Token expire fix

--- a/server.properties
+++ b/server.properties
@@ -21,5 +21,7 @@ config.thumbnail_height = 150;
 
 // JWT Key
 config.jwt = 'thingy';
+// JWT expire time
+config.tokenExpire = "5m";
 
 module.exports = config;
